--- a/woocommerce-akka-client/pom.xml
+++ b/woocommerce-akka-client/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <name>openapi-client</name>
+  <name>woocommerce-akka-client</name>
 
-  <groupId>org.openapitools</groupId>
-  <artifactId>openapi-client</artifactId>
+  <groupId>org.woocommerce</groupId>
+  <artifactId>woocommerce-akka-client</artifactId>
   <version>1.0.0</version>
 
   <packaging>jar</packaging>
