--- a/woocommerce-akka-client/src/main/resources/reference.conf
+++ b/woocommerce-akka-client/src/main/resources/reference.conf
@@ -12,7 +12,7 @@ org.woocommerce.akkaclient {
         connection-timeout: 5000ms
 
         default-headers {
-            "userAgent": "openapi-client_1.0.0"
+            "userAgent": "woocommerce-akka-client_1.0.0"
         }
 
         // let you define custom http status code, as in :
